# Tesi-triennale

./: DEIThesis.cls  README.md  TOC.md  Zotero.lnk  main.tex  main.xmpdata  references.bib
Code-freezed/MPAI-CAE-ARP Audio Analyser/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yml  pyproject.toml
Code-freezed/MPAI-CAE-ARP Audio Analyser/conformance_tests/: conformance_test.py  conftest.py
Code-freezed/MPAI-CAE-ARP Audio Analyser/src/audio_analyzer/: classifier.py  cli.py  segment_finder.py  server.py
Code-freezed/MPAI-CAE-ARP Audio Analyser/src/ml/classification/: __init__.py  _classification.py  _data_structures.py
Code-freezed/MPAI-CAE-ARP Audio Analyser/src/ml/datasets/: __init__.py  _loaders.py
Code-freezed/MPAI-CAE-ARP Audio Analyser/tests/: test_segment_finder.py
Code-freezed/MPAI-CAE-ARP Packager/: .env  .gitignore  Dockerfile  Makefile  README.md  config.yml  pyproject.toml
Code-freezed/MPAI-CAE-ARP Packager/conformance_tests/: conftest.py  pytest.ini  test_access_copy_files.py  test_preservation_master_files.py
Code-freezed/MPAI-CAE-ARP Packager/src/packager/: cli.py  lib.py  server.py
Code-freezed/MPAI-CAE-ARP Packager/unit_tests/: cli_test.py  lib_test.py  pytest.ini
Code-freezed/mpai-cae-arp/: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile
Code-freezed/mpai-cae-arp/docs/source/: conf.py  index.rst
Code-freezed/mpai-cae-arp/protos/: arp.proto
Code-freezed/mpai-cae-arp/tests/: test_files.py  test_time.py
Code-freezed/mpai-cae-arp/tests/audio/: test_audiowave.py
Code-freezed/mpai-cae-arp/tests/types/: test_irregularity.py  test_restoration.py
Notebooks/: chromaprint_comparisons.ipynb  create_graphs.ipynb
Notebooks/res/: aa_timings.json  pkg_timings.json
chapters/: 01_digitalizzazione.tex  02_mpai.tex  03_conformancetesting.tex  99_conclusioni.tex
frontmatter/: dedication.tex  glossary.tex  sommario.tex  thanks.tex
listings/: EditingList-badformat.json  EditingList-goodformat.json  audioanalyser-report.json  packager-report.json
